--- a/CRM/CRMAdminProject/AdminForms/Layout.master
+++ b/CRM/CRMAdminProject/AdminForms/Layout.master
@@ -82,12 +82,12 @@
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
-                                        <a href="profile.html">
+                                        <a href="#">
                                             <i class="fa fa-user"></i>User Profile
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="login.html">
+                                        <a href="../Login.aspx">
                                             <i class="fa fa-sign-out"></i>Signout
                                         </a>
                                     </li>
@@ -105,7 +105,7 @@
                     <!-- sidebar menu -->
                     <ul class="sidebar-menu">
                         <li class="active">
-                            <a href="#">
+                            <a href="Dashboard.aspx">
                                 <i class="fa fa-tachometer"></i><span>Dashboard</span>
                                 <span class="pull-right-container"></span>
                             </a>
@@ -124,12 +124,13 @@
                         </li>
                         <li class="treeview">
                             <a href="#">
-                                <i class="fa fa-list"></i><span>Clients List</span>
+                                <i class="fa fa-list"></i><span>Clients</span>
                                 <span class="pull-right-container">
                                     <i class="fa fa-angle-left pull-right"></i>
                                 </span>
                             </a>
                             <ul class="treeview-menu">
+                                <li><a href="ClientList.aspx">Registered Clients</a></li>
                                 <li><a href="#">Location Wise</a></li>
                             </ul>
                         </li>
