--- a/CRM/CRMClientProject/ClientForms/Layout.master
+++ b/CRM/CRMClientProject/ClientForms/Layout.master
@@ -86,7 +86,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="login.html">
+                                    <a href="../Login.aspx">
                                         <i class="fa fa-sign-out"></i>Signout
                                     </a>
                                 </li>
