--- a/CRM/CRMAdminProject/AdminForms/Layout.master
+++ b/CRM/CRMAdminProject/AdminForms/Layout.master
@@ -57,7 +57,7 @@
         <!-- Site wrapper -->
         <div class="wrapper">
             <header class="main-header">
-                <a href="index.html" class="logo">
+                <a href="Dashboard.aspx" class="logo">
                     <!-- Logo -->
                     <span class="logo-mini">
                         <img src="../assets/dist/img/mini-logo.png" alt="" />
