--- a/CRM/CRMClientProject/ClientForms/Layout.master
+++ b/CRM/CRMClientProject/ClientForms/Layout.master
@@ -171,7 +171,7 @@
         </asp:ContentPlaceHolder>
 
         <footer class="main-footer">
-            <strong>Copyright &copy; 2018 <a href="#">Dinoosys</a>.</strong> All rights reserved.
+            <strong>Copyright &copy; 2018 <a href="#">Activ8</a>.</strong> All rights reserved.
         </footer>
     </div>
     <!-- /.wrapper -->
