--- a/CRM/CRMClientProject/ClientForms/Layout.master
+++ b/CRM/CRMClientProject/ClientForms/Layout.master
@@ -59,10 +59,10 @@
             <a href="Dashboard.aspx" class="logo">
                 <!-- Logo -->
                 <span class="logo-mini">
-                    <img src="../assets/dist/img/mini-logo.png" alt=""/>
+                    <img src="../assets/dist/img/logo-mini.jpg" alt=""/>
                 </span>
                 <span class="logo-lg">
-                    <img src="../assets/dist/img/logo.png" alt=""/>
+                    <img src="../assets/dist/img/logo.jpg" alt=""/>
                 </span>
             </a>
             <!-- Header Navbar -->
