--- a/CRM/CRMClientProject/ClientForms/Layout.master
+++ b/CRM/CRMClientProject/ClientForms/Layout.master
@@ -20,7 +20,7 @@
     <!--<link href="assets/bootstrap-rtl/bootstrap-rtl.min.css" rel="stylesheet" type="text/css"/>-->
     <!-- Lobipanel css -->
     <link href="../assets/plugins/lobipanel/lobipanel.min.css" rel="stylesheet" type="text/css" />
-    
+
     <!-- Font Awesome -->
     <link href="../assets/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <!-- Pe-icon -->
@@ -45,172 +45,174 @@
     <!--<link href="assets/dist/css/stylecrm-rtl.css" rel="stylesheet" type="text/css"/>-->
     <!-- End Theme Layout Style
          =====================================================================-->
-    <asp:ContentPlaceHolder id="head" runat="server">
+    <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body class="hold-transition sidebar-mini">
-    <!--preloader-->
-    <div id="preloader">
-        <div id="status"></div>
-    </div>
-    <!-- Site wrapper -->
-    <div class="wrapper">
-        <header class="main-header">
-            <a href="Dashboard.aspx" class="logo">
-                <!-- Logo -->
-                <span class="logo-mini">
-                    <img src="../assets/dist/img/logo-mini.jpg" alt=""/>
-                </span>
-                <span class="logo-lg">
-                    <img src="../assets/dist/img/logo.jpg" alt=""/>
-                </span>
-            </a>
-            <!-- Header Navbar -->
-            <nav class="navbar navbar-static-top">
-                <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
-                    <!-- Sidebar toggle button-->
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="pe-7s-angle-left-circle"></span>
+    <form id="form1" runat="server">
+        <!--preloader-->
+        <div id="preloader">
+            <div id="status"></div>
+        </div>
+        <!-- Site wrapper -->
+        <div class="wrapper">
+            <header class="main-header">
+                <a href="Dashboard.aspx" class="logo">
+                    <!-- Logo -->
+                    <span class="logo-mini">
+                        <img src="../assets/dist/img/logo-mini.jpg" alt="" />
+                    </span>
+                    <span class="logo-lg">
+                        <img src="../assets/dist/img/logo.jpg" alt="" />
+                    </span>
                 </a>
-                <div class="navbar-custom-menu">
-                    <ul class="nav navbar-nav">
-                        <!-- user -->
-                        <li class="dropdown dropdown-user">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <img src="../assets/dist/img/avatar5.png" class="img-circle" width="45" height="45" alt="user"/>
+                <!-- Header Navbar -->
+                <nav class="navbar navbar-static-top">
+                    <a href="#" class="sidebar-toggle" data-toggle="offcanvas" role="button">
+                        <!-- Sidebar toggle button-->
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="pe-7s-angle-left-circle"></span>
+                    </a>
+                    <div class="navbar-custom-menu">
+                        <ul class="nav navbar-nav">
+                            <!-- user -->
+                            <li class="dropdown dropdown-user">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                    <img src="../assets/dist/img/avatar5.png" class="img-circle" width="45" height="45" alt="user" />
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li>
+                                        <a href="#">
+                                            <i class="fa fa-user"></i>User Profile
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="../Login.aspx">
+                                            <i class="fa fa-sign-out"></i>Signout
+                                        </a>
+                                    </li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </header>
+            <!-- =============================================== -->
+            <!-- Left side column. contains the sidebar -->
+            <aside class="main-sidebar">
+                <!-- sidebar -->
+                <div class="sidebar">
+                    <!-- sidebar menu -->
+                    <ul class="sidebar-menu">
+                        <li class="active">
+                            <a href="Dashboard.aspx">
+                                <i class="fa fa-tachometer"></i><span>Dashboard</span>
+                                <span class="pull-right-container"></span>
                             </a>
-                            <ul class="dropdown-menu">
-                                <li>
-                                    <a href="#">
-                                        <i class="fa fa-user"></i>User Profile
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="../Login.aspx">
-                                        <i class="fa fa-sign-out"></i>Signout
-                                    </a>
-                                </li>
+                        </li>
+                        <li class="treeview">
+                            <a href="#">
+                                <i class="fa fa-users"></i><span>Personnel Info</span>
+                                <span class="pull-right-container">
+                                    <i class="fa fa-angle-left pull-right"></i>
+                                </span>
+                            </a>
+                            <ul class="treeview-menu">
+                                <li><a href="#">Client</a></li>
+                                <li><a href="#">Spouse </a></li>
+                                <li><a href="#">Children  </a></li>
+
                             </ul>
                         </li>
+                        <li class="treeview">
+                            <a href="#">
+                                <i class="fa fa-list"></i><span>Trusts</span>
+                                <span class="pull-right-container">
+                                    <i class="fa fa-angle-left pull-right"></i>
+                                </span>
+                            </a>
+                            <ul class="treeview-menu">
+                                <li><a href="#">Add Trust  </a></li>
+                                <li><a href="#">Add Trust Settler </a></li>
+                                <li><a href="#">Add Trustees  </a></li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <a href="note.html">
+                                <i class="fa fa-user-circle"></i><span>Beneficiary</span>
+                                <span class="pull-right-container">
+                                    <i class="fa fa-angle-left pull-right"></i>
+                                </span>
+                            </a>
+                            <ul class="treeview-menu">
+                                <li><a href="#">Add Beneficiary  </a></li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a href="note.html">
+                                <i class="fa fa-home"></i><span>Company</span>
+                                <span class="pull-right-container">
+                                    <i class="fa fa-angle-left pull-right"></i>
+                                </span>
+                            </a>
+                            <ul class="treeview-menu">
+                                <li><a href="#">Add Company</a></li>
+                            </ul>
+                        </li>
+
                     </ul>
                 </div>
-            </nav>
-        </header>
-        <!-- =============================================== -->
-        <!-- Left side column. contains the sidebar -->
-        <aside class="main-sidebar">
-            <!-- sidebar -->
-            <div class="sidebar">
-                <!-- sidebar menu -->
-                <ul class="sidebar-menu">
-                    <li class="active">
-                        <a href="Dashboard.aspx">
-                            <i class="fa fa-tachometer"></i><span>Dashboard</span>
-                            <span class="pull-right-container"></span>
-                        </a>
-                    </li>
-                    <li class="treeview">
-                        <a href="#">
-                            <i class="fa fa-users"></i><span>Personnel Info</span>
-                            <span class="pull-right-container">
-                                <i class="fa fa-angle-left pull-right"></i>
-                            </span>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li><a href="#">Client</a></li>
-                            <li><a href="#">Spouse </a></li>
-                            <li><a href="#">Children  </a></li>
+                <!-- /.sidebar -->
+            </aside>
+            <!-- =============================================== -->
+            <!-- Content Wrapper. Contains page content -->
 
-                        </ul>
-                    </li>
-                    <li class="treeview">
-                        <a href="#">
-                            <i class="fa fa-list"></i><span>Trusts</span>
-                            <span class="pull-right-container">
-                                <i class="fa fa-angle-left pull-right"></i>
-                            </span>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li><a href="#">Add Trust  </a></li>
-                            <li><a href="#">Add Trust Settler </a></li>
-                            <li><a href="#">Add Trustees  </a></li>
-                        </ul>
-                    </li>
+            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+            </asp:ContentPlaceHolder>
 
-                    <li>
-                        <a href="note.html">
-                            <i class="fa fa-user-circle"></i><span>Beneficiary</span>
-                            <span class="pull-right-container">
-                                <i class="fa fa-angle-left pull-right"></i>
-                            </span>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li><a href="#">Add Beneficiary  </a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="note.html">
-                            <i class="fa fa-home"></i><span>Company</span>
-                            <span class="pull-right-container">
-                                <i class="fa fa-angle-left pull-right"></i>
-                            </span>
-                        </a>
-                        <ul class="treeview-menu">
-                            <li><a href="#">Add Company</a></li>
-                        </ul>
-                    </li>
-
-                </ul>
-            </div>
-            <!-- /.sidebar -->
-        </aside>
-        <!-- =============================================== -->
-        <!-- Content Wrapper. Contains page content -->
-
-        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-        </asp:ContentPlaceHolder>
-
-        <footer class="main-footer">
-            <strong>Copyright &copy; 2018 <a href="#">Activ8</a>.</strong> All rights reserved.
-        </footer>
-    </div>
-    <!-- /.wrapper -->
-    <!-- Start Core Plugins
+            <footer class="main-footer">
+                <strong>Copyright &copy; 2018 <a href="#">Activ8</a>.</strong> All rights reserved.
+            </footer>
+        </div>
+        <!-- /.wrapper -->
+        <!-- Start Core Plugins
          =====================================================================-->
-    <!-- jQuery -->
-    <script src="../assets/plugins/jQuery/jquery-1.12.4.min.js" type="text/javascript"></script>
-    <!-- jquery-ui -->
-    <script src="../assets/plugins/jquery-ui-1.12.1/jquery-ui.min.js" type="text/javascript"></script>
-    <!-- Bootstrap -->
-    <script src="../assets/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <!-- lobipanel -->
-    <script src="../assets/plugins/lobipanel/lobipanel.min.js" type="text/javascript"></script>
-    <!-- Pace js -->
-    <script src="../assets/plugins/pace/pace.min.js" type="text/javascript"></script>
-    <!-- SlimScroll -->
-    <script src="../assets/plugins/slimScroll/jquery.slimscroll.min.js" type="text/javascript">    </script>
-    <!-- FastClick -->
-    <script src="../assets/plugins/fastclick/fastclick.min.js" type="text/javascript"></script>
-    <!-- CRMadmin frame -->
-    <script src="../assets/dist/js/custom.js" type="text/javascript"></script>
-    <!-- End Core Plugins
+        <!-- jQuery -->
+        <script src="../assets/plugins/jQuery/jquery-1.12.4.min.js" type="text/javascript"></script>
+        <!-- jquery-ui -->
+        <script src="../assets/plugins/jquery-ui-1.12.1/jquery-ui.min.js" type="text/javascript"></script>
+        <!-- Bootstrap -->
+        <script src="../assets/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+        <!-- lobipanel -->
+        <script src="../assets/plugins/lobipanel/lobipanel.min.js" type="text/javascript"></script>
+        <!-- Pace js -->
+        <script src="../assets/plugins/pace/pace.min.js" type="text/javascript"></script>
+        <!-- SlimScroll -->
+        <script src="../assets/plugins/slimScroll/jquery.slimscroll.min.js" type="text/javascript">    </script>
+        <!-- FastClick -->
+        <script src="../assets/plugins/fastclick/fastclick.min.js" type="text/javascript"></script>
+        <!-- CRMadmin frame -->
+        <script src="../assets/dist/js/custom.js" type="text/javascript"></script>
+        <!-- End Core Plugins
          =====================================================================-->
-    <!-- Start Page Lavel Plugins
+        <!-- Start Page Lavel Plugins
          =====================================================================-->
-    <!-- ChartJs JavaScript -->
-    <script src="../assets/plugins/chartJs/Chart.min.js" type="text/javascript"></script>
-    <!-- Counter js -->
-    <script src="../assets/plugins/counterup/waypoints.js" type="text/javascript"></script>
-    <script src="../assets/plugins/counterup/jquery.counterup.min.js" type="text/javascript"></script>
-    <!-- Monthly js -->
-    <script src="../assets/plugins/monthly/monthly.js" type="text/javascript"></script>
-    <!-- End Page Lavel Plugins
+        <!-- ChartJs JavaScript -->
+        <script src="../assets/plugins/chartJs/Chart.min.js" type="text/javascript"></script>
+        <!-- Counter js -->
+        <script src="../assets/plugins/counterup/waypoints.js" type="text/javascript"></script>
+        <script src="../assets/plugins/counterup/jquery.counterup.min.js" type="text/javascript"></script>
+        <!-- Monthly js -->
+        <script src="../assets/plugins/monthly/monthly.js" type="text/javascript"></script>
+        <!-- End Page Lavel Plugins
          =====================================================================-->
-    <!-- Start Theme label Script
+        <!-- Start Theme label Script
          =====================================================================-->
-    <!-- Dashboard js -->
-    <script src="../assets/dist/js/dashboard.js" type="text/javascript"></script>
-    <!-- End Theme label Script
-         =====================================================================-->    
+        <!-- Dashboard js -->
+        <script src="../assets/dist/js/dashboard.js" type="text/javascript"></script>
+        <!-- End Theme label Script
+         =====================================================================-->
+    </form>
 </body>
 </html>
