Added ChildDetails page and ChildBL and ChildEntity
Added ChildDetails page in Client Forms and ChildBL in BusinessLogic and ChildEntity in BusinessObject and Layout page

--- a/CRM/CRMClientProject/ClientForms/Layout.master
+++ b/CRM/CRMClientProject/ClientForms/Layout.master
@@ -119,8 +119,8 @@
                             </a>
                             <ul class="treeview-menu">
                                 <li><a href="#">Client</a></li>
-                                <li><a href="#">Spouse </a></li>
-                                <li><a href="#">Children  </a></li>
+                                <li><a href="Spouse.aspx">Spouse </a></li>
+                                <li><a href="ChildDetails.aspx">Children  </a></li>
 
                             </ul>
                         </li>
