Changes in Admin and Client

--- a/CRM/CRMAdminProject/AdminForms/Layout.master
+++ b/CRM/CRMAdminProject/AdminForms/Layout.master
@@ -131,7 +131,8 @@
                             </a>
                             <ul class="treeview-menu">
                                 <li><a href="ClientList.aspx">Registered Clients</a></li>
-                                <li><a href="#">Location Wise</a></li>
+                                <li><a href="#">Location Wise</a></li>                                 
+                                <li><a href="">Client Registration Form</a></li>
                             </ul>
                         </li>
                         <li class="treeview">
