Added LocationMaster Form in Admin Forms
Added LocationMaster Form,Layout page in Admin Forms and
LocationBL,LocationEntity

--- a/CRM/CRMAdminProject/AdminForms/Layout.master
+++ b/CRM/CRMAdminProject/AdminForms/Layout.master
@@ -159,6 +159,19 @@
                                 <li><a href="#">Upload Documents</a></li>
                             </ul>
                         </li>
+
+                           <li class="treeview">
+                            <a href="#">
+                                <i class="fa fa-cog"></i><span>Configuration</span>
+                                <span class="pull-right-container">
+                                    <i class="fa fa-angle-left pull-right"></i>
+                                </span>
+                            </a>
+                            <ul class="treeview-menu">
+                                <li><a href="ClientService.aspx">Client Service</a></li>
+                                <li><a href="LocationMaster.aspx">Location Master</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
                 <!-- /.sidebar -->
