--- a/CRM/CRMClientProject/ClientForms/Layout.master
+++ b/CRM/CRMClientProject/ClientForms/Layout.master
@@ -85,7 +85,7 @@
                             <!-- user -->
                             <li class="dropdown dropdown-user">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <img src="../assets/dist/img/avatar5.png" class="img-circle" width="45" height="45" alt="user" />
+                                    <asp:Image ID="imgProfilePic" runat="server" class="img-circle"  width="45" height="45" alt="user"/>
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li>
