--- a/CRM/CRM/AdminForms/Layout.master
+++ b/CRM/CRM/AdminForms/Layout.master
@@ -152,20 +152,20 @@
                                 </span>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="AcceptClientSR.aspx">Accept Ownership of SR</a></li>
-                                <li><a href="#">Allocate ownership of SR
+                                <li><a href="#">Accept Ownership of SR</a></li>
+                               <%-- <li><a href="#">Allocate ownership of SR
                                 <br />
-                                    to other staff</a></li>
+                                    to other staff</a></li>--%>
                                 <li><a href="#">Add followup date and time</a></li>
-                                <li><a href="#">Add Client feedback and
+                               <%-- <li><a href="#">Add Client feedback and
                                 <br />
-                                    update next followup</a></li>
+                                    update next followup</a></li>--%>
                                 <li><a href="#">Work in process SR</a></li>
-                                <li><a href="#">Un-accepted SR</a></li>
+                               <%-- <li><a href="#">Un-accepted SR</a></li>
                                 <li><a href="#">Client Profile and Wealth
                                 <br />
                                     flowchart</a></li>
-                                <li><a href="#">Upload Documents</a></li>
+                                <li><a href="#">Upload Documents</a></li>--%>
                             </ul>
                         </li>
                         <li class="treeview">
@@ -180,11 +180,11 @@
                                 <li><a href="LocationMaster.aspx">Location Master</a></li>
                             </ul>
                         </li>
-                         <li class="treeview">
+                         <%--<li class="treeview">
                             <a href="DocumentsList.aspx">
                                 <i class="fa fa-list"></i><span>Documents</span>
                             </a>
-                        </li>
+                        </li>--%>
                     </ul>
                 </div>
                 <!-- /.sidebar -->
