--- a/CRM/CRM/AdminForms/Layout.master
+++ b/CRM/CRM/AdminForms/Layout.master
@@ -51,9 +51,9 @@
 <body class="hold-transition sidebar-mini">
     <form id="form1" runat="server">
         <!--preloader-->
-        <div id="preloader">
+       <%-- <div id="preloader">
             <div id="status"></div>
-        </div>
+        </div>--%>
         <!-- Site wrapper -->
         <div class="wrapper">
             <header class="main-header">
@@ -95,7 +95,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="../AdminLogin.aspx">
+                                        <a href="../Login.aspx">
                                             <i class="fa fa-sign-out"></i>Signout
                                         </a>
                                     </li>
@@ -157,12 +157,12 @@
                                 <br />
                                     to other staff</a></li>--%>
                                 <li><a href="#">Add followup date and time</a></li>
-                               <%-- <li><a href="#">Add Client feedback and
+                                <%--<li><a href="#">Add Client feedback and
                                 <br />
                                     update next followup</a></li>--%>
-                                <li><a href="#">Work in process SR</a></li>
-                               <%-- <li><a href="#">Un-accepted SR</a></li>
-                                <li><a href="#">Client Profile and Wealth
+                                <li><a href="WorkInProcess.aspx">Work in process SR</a></li>
+                              <%--  <li><a href="#">Un-accepted SR</a></li>--%>
+                               <%-- <li><a href="#">Client Profile and Wealth
                                 <br />
                                     flowchart</a></li>
                                 <li><a href="#">Upload Documents</a></li>--%>
@@ -180,11 +180,6 @@
                                 <li><a href="LocationMaster.aspx">Location Master</a></li>
                             </ul>
                         </li>
-                         <%--<li class="treeview">
-                            <a href="DocumentsList.aspx">
-                                <i class="fa fa-list"></i><span>Documents</span>
-                            </a>
-                        </li>--%>
                     </ul>
                 </div>
                 <!-- /.sidebar -->
