--- a/CRM/CRM/AdminForms/Layout.master
+++ b/CRM/CRM/AdminForms/Layout.master
@@ -95,7 +95,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="../Login.aspx">
+                                        <a href="../AdminLogin.aspx">
                                             <i class="fa fa-sign-out"></i>Signout
                                         </a>
                                     </li>
