--- a/CRM/CRM/AdminForms/Layout.master
+++ b/CRM/CRM/AdminForms/Layout.master
@@ -176,7 +176,7 @@
                                 </span>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="ClientService.aspx">Client Service</a></li>
+                                <li><a href="ClientService.aspx">Service Master</a></li>
                                 <li><a href="LocationMaster.aspx">Location Master</a></li>
                             </ul>
                         </li>
