Layout changes in Admin Forms

--- a/CRM/CRM/AdminForms/Layout.master
+++ b/CRM/CRM/AdminForms/Layout.master
@@ -180,7 +180,7 @@
                             </a>
                             <ul class="treeview-menu">
                                 <li><a href="ClientService.aspx">Service Master</a></li>
-                                <li><a href="LocationMaster.aspx">Location Master</a></li>
+                                <%--<li><a href="LocationMaster.aspx">Location Master</a></li>--%>
                             </ul>
                         </li>
                     </ul>
