changes in WorkInProcess and added Invoice document folder
changes in WorkInProcess and added Invoice document folder,InvoiceList in CLientforms

--- a/CRM/CRM/ClientForms/Layout.master
+++ b/CRM/CRM/ClientForms/Layout.master
@@ -158,7 +158,7 @@
                             </a>
                             <ul class="treeview-menu">
                                 <li><a href="ServiceRequest.aspx">Raise a Service Request</a></li>
-
+                                <li><a href="InvoicesList.aspx">Invoices List</a></li>
                             </ul>
                         </li>
 
