Added AmountReceivedReport in Admin Forms
Added AmountReceivedReport in Admin Forms and changes in Layout form and InvoicePaymentBL

--- a/CRM/CRM/AdminForms/Layout.master
+++ b/CRM/CRM/AdminForms/Layout.master
@@ -193,7 +193,8 @@
                             <ul class="treeview-menu">            
                                 <li><a href="ServiceWiseReport.aspx">Service Wise Report</a></li>
                                 <li><a href="OpenItemsReport.aspx">Open Items Report</a></li>                   
-                                 <li><a href="InvoiceReport.aspx">Invoices Report</a></li>                                                    
+                                 <li><a href="InvoiceReport.aspx">Invoices Report</a></li> 
+                                <li><a href="AmountReceivedReport.aspx">Amount Received Report</a></li>                                                   
                             </ul>
                         </li>
                     </ul>
